--- a/nginx.conf.example
+++ b/nginx.conf.example
@@ -1,8 +1,3 @@
-# Replace CHANGEME with the game's short name:
-# upstream server_CHANGEME_socket {
-#     server unix:/opt/server-sockets/CHANGEME.sock;
-# }
-
 upstream rankings_socket {
     server unix:/opt/rankings-sockets/rankings.sock;
 }
@@ -20,31 +15,9 @@ server {
 	index index.html index.php;
 	root /opt/ynohome;
 
-	location /CHANGEME {
-		alias /opt/client;
-		try_files $uri $uri/ =404;
+	## AUTOMATED (CLIENT): Use ./scripts/add-game.sh to add a game.
 
-		location ~ \.php$ {
-			include fastcgi_params;
-			fastcgi_pass php-fpm:9000;
-            fastcgi_param SCRIPT_FILENAME $request_filename;
-        }
-
-        location /CHANGEME/images/charsets/CHANGEME {
-			alias /opt/games/CHANGEME/CharSet;
-			try_files $uri $uri/ =404;
-		}
-
-		location ^~ /CHANGEME/locations/ {
-			alias /opt/locations/;
-			try_files $uri $uri/ =404;
-		}
-
-		location ^~ /CHANGEME/lang/badge/ {
-			alias /opt/badges/lang/;
-			try_files $uri $uri/ =404;
-		}
-	}
+	## END OF AUTOMATED CODE
 
 	location /assets {
 		sendfile           on;
@@ -90,37 +63,9 @@ server {
 		set $cors_origin $http_origin;
 	}
 
-	location /CHANGEME/ {
-		proxy_pass http://server_CHANGEME_socket/;
+	## AUTOMATED (SERVER): Use ./scripts/add-game.sh to add a game.
 
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header X-Forwarded-Proto $scheme;
-		proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-
-		# Needed for websocket:
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection $connection_upgrade;
-
-		proxy_read_timeout 86400;
-		proxy_send_timeout 86400;
-		# Handle preflight OPTIONS requests
-		if ($request_method = 'OPTIONS') {
-			add_header 'Access-Control-Allow-Origin' $http_origin always;
-			add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
-			add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin' always;
-			add_header 'Access-Control-Max-Age' 86400 always;
-			add_header 'Content-Length' 0;
-			add_header 'Content-Type' 'text/plain';
-			return 204;
-		}
-
-		add_header 'Access-Control-Allow-Origin' $cors_origin always;
-		add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
-		add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin' always;
-		add_header 'Access-Control-Allow-Credentials' 'true' always;
-	}
+	## END OF AUTOMATED CODE
 
 	location /rankings/ {
 		proxy_pass http://rankings_socket/;
