docker, scripts: make containers smaller, allow passing custom path to audioconvert and gencache wrapper scripts

--- a/docker/ynorankings/Dockerfile
+++ b/docker/ynorankings/Dockerfile
@@ -2,7 +2,7 @@
 # NOTE: This file expects the build context to be set to the ynorankings source code directory.
 
 ARG GOLANG_VERSION=1.25
-FROM golang:${GOLANG_VERSION} as base
+FROM golang:${GOLANG_VERSION}-alpine AS build
 
 WORKDIR /opt/ynorankings
 
@@ -12,16 +12,22 @@ COPY . .
 # Build the binary
 RUN go build
 
-# Add yno user
-ARG UID=10001
-ARG GID=10001
-RUN groupadd -g "${GID}" yno
-RUN useradd -m -u ${UID} -g yno yno
+FROM alpine:3.23
+WORKDIR /opt/ynorankings
+COPY --from=build /opt/ynorankings/ynorankings /opt/ynorankings/ynorankings
 
 # Let yno user write to the sockets directory
 RUN mkdir -p sockets && \
     chown -R 10001:10001 sockets
 
+# Add yno user
+ARG UID=10001
+ARG GID=10001
+RUN apk add shadow
+RUN groupadd -g "${GID}" yno
+RUN useradd -m -u ${UID} -g yno yno
+RUN apk del shadow
+
 # Run ynorankings
 USER yno
-CMD ./ynorankings --config config.yml
+ENTRYPOINT [ "/opt/ynorankings/ynorankings", "--config", "config.yml" ]
