--- a/docker/ynoserver/Dockerfile
+++ b/docker/ynoserver/Dockerfile
@@ -2,7 +2,7 @@
 # NOTE: This file expects the build context to be set to the ynoserver source code directory.
 
 ARG GOLANG_VERSION=1.25
-FROM golang:${GOLANG_VERSION} as base
+FROM golang:${GOLANG_VERSION}-alpine AS build
 
 WORKDIR /opt/ynoserver
 
@@ -12,11 +12,17 @@ COPY . .
 # Build the binary
 RUN go build
 
+FROM alpine:3.23
+WORKDIR /opt/ynoserver
+COPY --from=build /opt/ynoserver/ynoserver /opt/ynoserver/ynoserver
+
 # Add yno user
 ARG UID=10001
 ARG GID=10001
+RUN apk add shadow
 RUN groupadd -g "${GID}" yno
 RUN useradd -m -u ${UID} -g yno yno
+RUN apk del shadow
 
 # Let yno user write to the sockets directory
 RUN mkdir -p sockets && \
@@ -34,7 +40,6 @@ RUN mkdir -p saves && \
 RUN mkdir -p screenshots && \
     chown -R 10001:10001 screenshots
 
-
 # Run ynoserver
 USER yno
-CMD ./ynoserver --config config.yml
+ENTRYPOINT [ "/opt/ynoserver/ynoserver", "--config", "config.yml" ]
